--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <title>animal shelter</title>
-<link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link href="css/styles.css" rel ="stylesheet" type="text/css" media="all">
 </head>
 <body>
   <h1>Animal shelter</h1>
